# open-ai-integration

./: .env  .env.example  .env.template  .gitignore  README.md  alembic.ini  pyproject.toml  start_dev.sh  test_conversation_manual.py  test_stream_conversation.py  test_upload.json  test_vector_store.py
.cursor/rules/: fastapi.mdc
app/: __init__.py  celery_app.py  config.py  main.py  tasks.py
app/api/: __init__.py  api.py  dependencies.py  deps.py  public_routes.py
app/api/routes/: documents.py
app/api/v1/: __init__.py  auth.py  knowledge_bases.py  router.py  tasks.py
app/api/v1/endpoints/: __init__.py  conversations.py  documents.py  knowledge_base.py  knowledge_bases.py  knowledgebase.py  query.py  test.py  upload.py
app/core/: __init__.py  cache.py  config.py  dependencies.py  exceptions.py  limiter.py  pagination.py  security.py
app/models/: __init__.py  conversation.py  database.py  document.py  knowledge_base.py  schemas.py  task.py  user.py
app/routers/: query.py  upload.py
app/schemas/: __init__.py  schemas.py  user.py
app/services/: __init__.py  auth.py  conversation.py  conversation_service.py  document.py  document_chunker.py  document_processor.py  file_processor.py  knowledge_base.py  llm.py  llm_service.py  parser.py  rag.py  task_manager.py  vector_store.py
app/task/: __init__.py  celery_app.py  celery_config.py  document_tasks.py  task_cancellation.py  task_wrapper.py  tasks.py
migrations/: env.py
migrations/versions/: 060e20bf2310_add_task_status_table.py  15fc255bbeef_add_custom_separators_to_knowledge_base.py  166c30c65208_添加知识库相关表.py  4ea37d4b1740_initial_migration.py  596601937b3a_add_conversations_and_messages_tables.py  c5a31eff30c8_add_chunking_fields_to_knowledge_base.py  e79e541ba92c_add_knowledge_base_models.py
scripts/: create_test_user.py
tests/: test_conversation_generation.py  test_conversations.py  test_document.py  test_e2e_upload_query.py  test_file_processor.py  test_imports.py  test_knowledge_base.py  test_knowledge_base_document.py  test_llm_service.py  test_mocks.py  test_rag.py  test_segment.py
web/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
web/.next/: app-build-manifest.json  trace
web/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @reactflow+background@11.3.14_@types+react@18.3.20_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @reactflow+controls@11.2.14_@types+react@18.3.20_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @reactflow+core@11.11.4_@types+react@18.3.20_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @reactflow+minimap@11.7.14_@types+react@18.3.20_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @swc+helpers@0.5.5.js  classcat@5.0.5.js  d3-color@3.1.0.js  d3-dispatch@3.0.1.js  d3-drag@3.0.0.js  d3-ease@3.0.1.js  d3-interpolate@3.0.1.js  d3-selection@3.0.0.js  d3-timer@3.0.1.js  d3-transition@3.0.1_d3-selection@3.0.0.js  d3-zoom@3.0.0.js  next@14.2.5_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  reactflow@11.11.4_@types+react@18.3.20_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  use-sync-external-store@1.5.0_react@18.3.1.js  zustand@4.5.6_@types+react@18.3.20_react@18.3.1.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js
web/.next/static/webpack/: webpack.1596c1cdcb846be2.hot-update.js  (+19 more)
web/app/: globals.css  layout.tsx  page.tsx
web/app/knowledge/: page.tsx
web/app/workflows/: page.tsx
web/app/workspace/: page.tsx
web/components/: ChatLayout.jsx  ChatLayout.tsx  PdfViewer.tsx  WorkflowDisplay.tsx
web/components/Chat/: ConversationInput.jsx  ConversationInput.tsx  KnowledgeBaseSelector.jsx  KnowledgeBaseSelector.tsx  LexicalInput.tsx  MessageList.jsx  MessageList.tsx  index.jsx  index.tsx
web/components/ConversationList/: ConversationActions.tsx  index.jsx
web/components/KnowledgeBase/: DocumentList.tsx  DocumentUpload.tsx  KnowledgeBaseCreate.tsx  KnowledgeBaseDetail.tsx  KnowledgeBaseList.tsx
web/components/Layout/: WorkspaceLayout.tsx
web/components/Workflow/: CustomConnectionLine.tsx  CustomEdge.tsx  NodeContextMenu.tsx  NodeEditor.tsx  NodeSelector.tsx  PanelContextMenu.tsx  WorkflowCanvas.tsx  WorkflowDetail.tsx  WorkflowList.tsx  style.css
web/config/: index.js  index.ts
web/services/: conversationService.js  conversationService.ts  knowledgeBaseService.ts  knowledgeService.js  knowledgeService.ts  workflowService.ts
web/types/: conversation.d.ts  conversation.ts  index.ts  knowledgeBase.d.ts  knowledgeBase.ts  workflow.ts
(+64 files in other folders)
