[tool.poetry]
name = "enterprise-rag-system"
version = "0.1.0"
description = "Enterprise RAG system using FastAPI, Langchain 0.3, and Milvus"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # Langchain 0.3 might have issues with Python 3.12, using 3.10/3.11 is safer
fastapi = "^0.111.0" # Updated to support Pydantic V2
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1" # Updated to V2
pydantic-settings = "^2.2.1"
langchain = "^0.1.0" # Use a recent Langchain version compatible with core/community separation
langchain-openai = "^0.1.3"
langchain-community = "^0.0.47"
pymilvus = "^2.4.1" # Check compatibility with your Milvus version
openai = "^0.28.0" # Older OpenAI SDK likely needed for Langchain 0.0.x
tiktoken = "^0.5.0" # Often needed by OpenAI integration
# 添加新的嵌入模型依赖
dashscope = "^1.14.1" # For Qwen
requests = "^2.31.0" # 用于 Ollama 和 Jina API 调用
# deepseek-python = "..." # Check for DeepSeek Python SDK if available
pypdf = "^4.1.0" # For PDF parsing
python-docx = "^1.1.0" # For DOCX parsing
markdown = "^3.6" # For MD parsing
python-dotenv = "^1.0.0"
# Embedding model dependency 
sentence-transformers = "^2.7.0" # For HuggingFace/Custom
langchain-cohere = "^0.1.5" # Added for Cohere Rerank
rank-bm25 = "^0.2.2" # Added for BM25 Hybrid Search
celery = {extras = ["redis"], version = "^5.4.0"} # Added Celery with Redis extras
redis = "^5.0.4" # Added Redis client library

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 